2012-04-05  David S. Miller  <davem@davemloft.net>

	* elf/rtld.c (dl_main): If DL_DEBUG_UNUSED is enabled, turn off
	lazy binding.
	* elf/dl-lookup.c (_dl_lookup_symbol_x): If DL_DEBUG_UNUSED, ignore
	undefined symbol errors.

	* elf/rtld.c (dl_main): Skip VDSO when checking for unused
	DT_NEEDED entries.

2012-04-05  Michael Matz  <matz@suse.de>

	[BZ #13592]
	* sysdeps/x86_64/memset.S: Fix size paramater comparisions.

2012-04-05  Andreas Jaeger  <aj@suse.de>

	[BZ #13908]
	* stdlib/stdlib.h: Don't warn about unused result of mktemp, fix
	comment.

2012-04-05  Nobuhiro Iwamatsu  <iwamatsu@nigauri.org>

	* sysdeps/sh/sh4/fpu/fesetround.c (fesetround): Fix return value
	which ROUND is no valid rounding mode.

2012-04-05  Nobuhiro Iwamatsu  <iwamatsu@nigauri.org>

	* sysdeps/sh/sh4/fpu/fegetenv.c (fegetenv): Set fpscr register which
	read again.
	* sysdeps/sh/sh4/fpu/ftestexcept.c: Likewise.

2012-04-05  Nobuhiro Iwamatsu  <iwamatsu@nigauri.org>

	* sysdeps/sh/sh4/fpu/fraiseexcpt.c (feraiseexcept): Produce
	an exception using FPU order intentionally.

2012-04-05  Nobuhiro Iwamatsu  <iwamatsu@nigauri.org>

	* sysdeps/sh/sh4/fpu/fedisblxcpt.c: New file.
	* sysdeps/sh/sh4/fpu/feenablxcpt.c: New file.
	* sysdeps/sh/sh4/fpu/fegetexcept.c: New file.
	* sysdeps/sh/sh4/fpu/feupdateenv.c: New file.

2012-04-05  Simon Josefsson  <simon@josefsson.org>

	[BZ #12340]
	* sysdeps/mach/hurd/ttyname_r.c (__ttyname_r): Return ERANGE instead of
	EINVAL when BUFLEN is too smal.

2012-04-05  Thomas Schwinge  <thomas@codesourcery.com>

	[BZ #13553]
	* sysdeps/mach/i386/machine-lock.h: Use volatile instead of __volatile.
	* sysdeps/mach/powerpc/machine-lock.h: Likewise.

2012-04-03  Andreas Jaeger  <aj@suse.de>

	[BZ #13938]
	* manual/setjmp.texi (System V contexts): Fix sentence.

	[BZ #13926]
	* sysdeps/i386/bits/byteswap.h [!__GNUC__](__bswap_constant_64):
	New macro for this case.
	[!__GNUC__] (__bswap_64): New inline function for this case.